<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never"
    android:fillViewport="true"
    tools:context=".fragment.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_arbuz"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/arbuz"/>
        <TextView
            android:id="@+id/tv_choosePlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_arbuz"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:text="@string/choosePlace"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAllCaps="false"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/tv_choosePlace"/>
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_place"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="18dp"
            android:textStyle="bold"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:text="@string/speliy"
            app:layout_constraintTop_toBottomOf="@id/rv_place"
            app:layout_constraintStart_toEndOf="@id/tv_status"/>
        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_status"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="18dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/weight"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_weight"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_weight"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/count"/>
        <LinearLayout
            android:id="@+id/ll_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_weight"
            app:layout_constraintStart_toEndOf="@id/tv_count"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_btn"
            android:layout_marginStart="12dp">
            <TextView
                android:id="@+id/tv_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_weight"
                android:drawableStart="@drawable/ic_baseline_minimize_24"
                android:layout_marginTop="-7dp"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/tv_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:inputType="number"
                android:layout_marginStart="12dp"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_add_24"
                android:layout_marginTop="1dp"
                android:layout_marginStart="12dp"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_counter"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/ed_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_address"
            android:background="@drawable/bg_ed"
            android:hint="@string/city"
            android:padding="10dp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/ed_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ed_city"
            android:background="@drawable/bg_ed"
            android:hint="@string/street"
            android:padding="10dp"
            android:layout_marginTop="8dp"/>
        <LinearLayout
            android:id="@+id/ll_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ed_street"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/ed_flat"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_ed"
                android:inputType="number"
                android:hint="@string/flat"
                android:padding="10dp" />
            <EditText
                android:id="@+id/ed_floor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ed"
                android:hint="@string/floor"
                android:layout_marginStart="8dp"
                android:inputType="number"
                android:padding="10dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_deliveryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_address"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/date"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/tv_deliveryDate"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_deliveryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_date"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/time"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_time"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_deliveryTime"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/tv_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/information"
            app:layout_constraintTop_toBottomOf="@id/rv_time"
            app:layout_constraintStart_toStartOf="parent"/>
        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_information"
            android:background="@drawable/bg_ed"
            android:hint="@string/name"
            android:padding="10dp"
            android:layout_marginTop="8dp"/>
        <EditText
            android:id="@+id/ed_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ed_name"
            android:background="@drawable/bg_ed"
            android:hint="@string/comment"
            android:padding="10dp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/tv_pieces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ed_comment"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/pieces"
            android:textColor="#393737"
            android:textSize="18sp"
            android:textStyle="normal"
            android:layout_marginTop="24dp"/>
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ed_comment"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomCheckbox02"
            android:layout_marginTop="12dp"
            android:buttonTint="#39A603"/>
        <Button
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order"
            app:layout_constraintTop_toBottomOf="@id/tv_pieces"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_btn"
            app:backgroundTint="#39A603"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>