<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        tools:context=".activity.OrderSuccessActivity">

        <TextView
            android:id="@+id/txthello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/ura"
            android:textColor="#fafafa"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtSuccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txthello"
            android:layout_margin="10dp"
            android:layout_marginVertical="10dp"
            android:drawableStart="@drawable/ic_baseline_check_circle_24"
            android:gravity="center"
            android:text="@string/your_order_has_been_successfully_placed"
            android:textColor="#fafafa"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCentre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtSuccess"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_order_success"
                    app:layout_constraintDimensionRatio="H,3:2"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvCentre"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/thank_you_for_ordering_through_arbuz"
            android:textColor="#fafafa"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:backgroundTint="@color/white"
            android:layout_alignParentBottom="true"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>

